fix select xrui component and profile menu spacing and placement of mic and exit vr button

--- a/packages/client-core/src/systems/components/XRSelectDropdown/index.scss
+++ b/packages/client-core/src/systems/components/XRSelectDropdown/index.scss
@@ -1,5 +1,4 @@
 .selectContainer {
-  width: 100%;
   height: 24px;
   padding: 5px;
   display: flex;
