--- a/packages/client-core/src/systems/ui/ProfileDetailView/index.scss
+++ b/packages/client-core/src/systems/ui/ProfileDetailView/index.scss
@@ -919,6 +919,7 @@
   .modeSettingContainer {
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
   }
 
   .modesHeading {
